brat/test/golden/error/fanout-too-many-overs.brat.golden
Error in test/golden/error/fanout-too-many-overs.brat@2:5-13
f = { [/\] }
    ^^^^^^^^

  Type error: No unders but overs: (head :: Nat) for [/\]

